added new features

--- a/Game7/index.html
+++ b/Game7/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="results">0</h1>
-<div class="game-container">
+    <div class="info">
+        <h1>Alien Shooter Game</h1>
+        <p class="results">Lives: 3 | Level: 1 | Score: 0</p>
+    </div>
     <div class="grid"></div>
     <script src="app.js"></script>
-</div>
 </body>
 </html>
