--- a/Game1/index.html
+++ b/Game1/index.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"></link>
     <title>Rock-paper-Scissors Game</title>
 </head>
 <body>
-    <h2>Computer Choice:<span id="computer"></span></h2>
-    <h2>Your Choice:<span id="user"></span></h2>
-    <h2>Result:<span id="result"></span></h2>
-    <button id="rock">rock</button>
-    <button id="paper">paper</button>
-    <button  id="scissor">scissor</button>
-    <h2>Score board:<span id="score"></span></h2>
-    <button id="reset">reset</button>
-    <script  class="button" src="app.js"></script>
+    <div class="game-container">
+        <h2>Computer Choice: <span id="computer"></span></h2>
+        <h2>Your Choice: <span id="user"></span></h2>
+        <div>
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissor">Scissor</button>
+        </div>
+        <h2>Result: <span id="result"></span></h2>
+        <h2>Scoreboard: <span id="score"></span></h2>
+        <button id="reset">Reset</button>
+        <h3>Game History:</h3>
+        <ul id="history"></ul>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
