--- a/Game2/index.html
+++ b/Game2/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <h3>Score:<span id="result"></span></h3>
-
+  <h3>Time: <span id="timer">0</span> seconds</h3>
   <div class="grid"></div>
-
+  <button id="restart">Restart</button>
 </body>
 </html>
