--- a/Game3/index.html
+++ b/Game3/index.html
@@ -22,6 +22,10 @@
        <div class="square" id="8"></div>
        <div class="square" id="9"></div>
     </div>
+    <div class="controls">
+        <button id="pause">Pause</button>
+        <button id="restart">Restart</button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
