--- a/Game4/index.html
+++ b/Game4/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="score">0</div>
+    <div id="score">Score: 0</div>
+    <div id="lives">Lives: 3</div>
     <div class="grid"></div>
     <script src="app.js"></script>
 </body>
 </html>
+
