--- a/Game6/index.html
+++ b/Game6/index.html
@@ -10,7 +10,7 @@
 <body>
   <h3>The current Player is: Player <span id="current-player">1</span></h3>
   <h3 id="result"></h3>
-
+  <button id="restart">Restart</button>
   <div class="grid">
     <div></div>
     <div></div>
@@ -62,6 +62,5 @@
     <div class="taken"></div>
     <div class="taken"></div>
   </div>
-
 </body>
 </html>
